--- a/css/account.css
+++ b/css/account.css
@@ -1,30 +1,51 @@
-#login-c {
+#account-container {
     background-color: var(--primary-light);
 
     font-family: 'Proza Libre', sans-serif;
     font-size: 1.25rem;  
 
-    margin: 5rem 30%;
+    margin: 5rem 20%;
     padding: 5%;
 
     border-radius: 1em;
 }
 
-
-#login-c input {
+/*
+#account-container input {
     height: 3rem;
     font-size: 1.25rem;
     padding-left: 1rem;
-}
-
-#login-c form {
+}*/
+/*
+#account-container form {
     display: flex;
     flex-flow: column nowrap;
     justify-content: space-between;
     align-items: stretch; 
 }
+*/
 
-#title-text {
+#account-books-container ul {
+    list-style: none;
+}
+
+#account-details-container {
+    margin-bottom: var(--margin-itens);
+}
+
+
+.account-book {
+    margin-top: 15px;
+    display: flex;
+    flex-direction: row;
+}   
+
+.account-book a {
+    text-decoration: none;
+    color: var(--text-dark);
+}
+
+.account-title {
     font-size: 2rem;
     font-weight: 600;
     text-shadow: .1em .1em .1em var(--shadow);
@@ -34,22 +55,16 @@
     margin: 0 0 var(--margin-itens) 0;
 }
 
-#email-c {
-    display: grid;
-    grid-template: auto auto;
-    gap: .5rem;
-
-    margin: 0 0 var(--margin-itens) 0;
+.account-book-info {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
 }
 
-#passwd-c {
-    display: grid;
-    grid-template: auto auto;
-    gap: .5rem;
-
-    padding: 0 0 calc(var(--margin-itens) * 1.5) 0;
+.account-book-info li {
+    padding: 0 0 15px 15px;
 }
 
-#button-create-account {
-    margin: 0 0 var(--margin-itens) 0;
+.account-book-cover {
+    border-radius: 15px;
 }
