--- a/css/books_container.css
+++ b/css/books_container.css
@@ -3,8 +3,6 @@
     grid-template-columns: auto auto auto auto auto;
     gap: 1rem;
 
-    
-
     background-color: var(--background);
     padding: 5rem var(--container-lr-padding);
 }
@@ -16,13 +14,21 @@
 #books-container a:hover {
     transform: scale(1.0625); /* 1 / 32 */
     
-    border-radius: 5%/3.3333%; /* Book spect ratio is 1.5, so this is nescessary so that the book border is rounded and not eliptical*/
+    border-radius: 15px;
     box-shadow: 0px 0px 16px 5px var(--shadow);
 }
 
 .book {
+    /*height: 288px;
+    width: 192px;*/
+
     height: 100%;
     width: 100%;
 
-    border-radius: 5%/3.3333%; /* Book spect ratio is 1.5, so this is nescessary so that the book border is rounded and not eliptical*/
+    border-radius: 15px;
+}
+
+.book-description {
+    text-align: center;
+    position: absolute;
 }
