--- a/app/view/home/index.html
+++ b/app/view/home/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Books{% endblock %}
+{% block title %}Home{% endblock %}
 
 {% block body %}
 	<h1>Hello from inside home's view, {{ name }}!</h1>
