--- a/app/view/base.html
+++ b/app/view/base.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Bookshelf!{% block title %}{% endblock %}</title>
+	<title>{% block title %}{% endblock %} • Bookshelf!</title>
 </head>
 <body>
 	<h1>This should show up on every page</h1>
