--- a/app/view/error/404.html
+++ b/app/view/error/404.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "error/base.html" %}
 
 {% block title %}Page not found{% endblock %}
 
@@ -8,4 +8,4 @@
 	<h3>Page not found</h3>
 	<p>We could not find this page</p>
 
-{% endblock %}
+{% endblock body %}
