--- a/app/view/register/success.html
+++ b/app/view/register/success.html
@@ -3,5 +3,6 @@
 {% block title %}Register{% endblock %}
 
 {% block body %}
-	<h1>Success at registring you!</h1>
+	<h1>Success!</h1>
+	<p>You are now registred.</p>
 {% endblock %}
