Fixed non complience with psr-4

--- a/app/view/base.html
+++ b/app/view/base.html
@@ -14,8 +14,11 @@
 		<a href="/login/index">Login</a>
 	</nav>
 	{% endblock nav %}
-	{% block body %}
-		
-	{% endblock %}
+	
+	{% block body %}{% endblock %}
+	
+	{% block footer %}{% endblock footer %}
+
+	{% block scripts %}{% endblock scripts %}
 </body>
 </html>
