--- a/app/view/register/new.html
+++ b/app/view/register/new.html
@@ -15,35 +15,35 @@
 		</div>
 	{% endif %}
 
-	<form method="POST" action="insert">
+	<form method="POST" action="insert" id="register-new-form">
 		<fieldset>
 			<label>Email</label>
-			<input type="email" name="email">
+			<input type="email" name="email" required>
 		</fieldset>
-		<fieldset>
+		<fieldset> <!-- TODO: MAKE EYE THING-->
 			<label>Password</label>
-			<input type="password" name="password">
-			<small>Password must be 8 or above characters and contain at least a letter and a number.</small>
+			<input type="password" name="password" id="password" required>
+			<!--small>Password must be 8 or above characters and contain at least a letter and a number.</small-->
 		</fieldset>
 		<fieldset>
 			<label>Fullname</label>
-			<input type="text" name="fullname">
+			<input type="text" name="fullname" required>
 		</fieldset>
 		<fieldset>
 			<label>Nickname</label>
 			<input type="text" name="nickname">
-			<small>Optional; If not set we will call you by your first name.</small>
+			<!--small>Optional; If not set we will call you by your first name.</small-->
 		</fieldset>
 		<fieldset>
 			<label>Birthday</label>
-			<input type="date" name="birthday">
+			<input type="date" name="birthday" required>
 		</fieldset>
 		<fieldset>
-			<label>Address</label>
+			<label>Address</label required>
 			<input type="text" name="address">
 		</fieldset>
 		<fieldset>
-			<input type="checkbox" name="terms">
+			<input type="checkbox" name="terms" required>
 			<label>I read and agree with the <a href="terms.html.php">Terms and Conditions</a></label>
 		</fieldset>
 		<fieldset>
@@ -53,3 +53,73 @@
 		</fieldset>
 	</form>
 {% endblock %}
+
+{% block scripts %}
+	<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js" 
+			integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" 
+			crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.3/dist/jquery.validate.min.js"></script>
+	<script>
+		$.validator.addMethod('passwordLetterAndNumber', function(value, element, param){
+				if(value != '') {
+					if(value.match(/.*[a-z]+.*/i) == null) {
+						return false;
+					}
+					if(value.match(/.*\d+.*/) == null) {
+						return false;
+					}
+				}
+				return true;
+			},
+			'Must have at least one letter and one number'
+		);
+
+		var password = $('#password');
+		var eye= $("#eye");
+		
+		eye.mousedown(function() {
+			password.attr("type", "text");
+		});
+			
+		eye.mouseup(function() {
+			password.attr("type", "password");
+		});
+		// para evitar o problema de arrastar a imagem e a senha continuar exposta
+		$( "#eye" ).mouseout(function() { 
+			password.attr("type", "password");
+		});
+
+		$(document).ready(function(){
+			$('#register-new-form').validate({
+				rules: {
+					email: {
+						required: true,
+						email: true
+					},
+					password: {
+						required: true,
+						minlength: 8,
+						passwordLetterAndNumber: true
+					},
+					fullname: 'required',
+					birthday: {
+						required: true,
+						date: true
+					},
+					address: {
+						required: true,
+						minlength: 3
+					},
+					terms: 'required'
+				},
+				messages: {
+					fullname: 'Thats not a valid name',
+					email: {
+						required: 'Please, enter an email',
+						email: 'Invalid email format'
+					}
+				}
+			});
+		});
+	</script>
+{% endblock scripts %}
