--- a/app/view/register/success.html
+++ b/app/view/register/success.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Register{% endblock %}
+{% block title %}Success{% endblock %}
 
 {% block body %}
 	<h1>Success!</h1>
