Updated nav links; Front end eye for password visibility; Put utility function;

--- a/app/view/base.html
+++ b/app/view/base.html
@@ -9,9 +9,9 @@
 <body>
 	{% block nav %}
 	<nav>
-		<a href="/home/index">Home</a>
-		<a href="/register/new">Register</a>
-		<a href="/login/index">Login</a>
+		<a href="/">Home</a>
+		<a href="/register">Register</a>
+		<a href="/login">Login</a>
 	</nav>
 	{% endblock nav %}
 	
