Added profile editing

--- a/app/view/base.html
+++ b/app/view/base.html
@@ -13,6 +13,7 @@
 		<a href="/">Home</a>
 		{% if user %}
 			<a href="/logout">Logout</a>
+			<a href="/profile/index">Profile</a>
 		{% else %}
 			<a href="/register">Register</a>
 			<a href="/login">Login</a>
