--- a/App/View/Access/login.html
+++ b/App/View/Access/login.html
@@ -15,7 +15,7 @@
 		</div>
 	{% endif %}
 
-	<form method="POST" action="access/validate" id="register-new-form">
+	<form method="POST" action="/access/validate" id="register-new-form">
 		<fieldset>
 			<label>Email</label>
 			<input type="email" name="email" value="{{ user.email }}" required>
