--- a/app/view/register/new.html
+++ b/app/view/register/new.html
@@ -15,7 +15,7 @@
 		</div>
 	{% endif %}
 
-	<form method="POST" action="insert" id="register-new-form">
+	<form method="POST" action="/insert" id="register-new-form">
 		<fieldset>
 			<label>Email</label>
 			<input type="email" name="email" required>
