Added book selling

--- a/app/view/base.html
+++ b/app/view/base.html
@@ -11,6 +11,7 @@
 	{% block nav %}
 	<nav>
 		<a href="/">Home</a>
+		<a href="/book/sell">Sell</a>
 		{% if user %}
 			<a href="/logout">Logout</a>
 			<a href="/profile/index">Profile</a>
