--- a/app/view/base.html
+++ b/app/view/base.html
@@ -13,8 +13,11 @@
 		<a href="/">Home</a>
 		<a href="/book/sell">Sell</a>
 		{% if user %}
-			<a href="/logout">Logout</a>
+			{% if user.id_user_type == 2 %}
+				<a href="admin/menu">Admin</a>
+			{% endif %}
 			<a href="/profile/index">Profile</a>
+			<a href="/logout">Logout</a>
 		{% else %}
 			<a href="/register">Register</a>
 			<a href="/login">Login</a>
