Added admin book listing

--- a/app/view/base.html
+++ b/app/view/base.html
@@ -14,7 +14,7 @@
 		<a href="/book/sell">Sell</a>
 		{% if user %}
 			{% if user.id_user_type == 2 %}
-				<a href="admin/menu">Admin</a>
+				<a href="/admin/menu">Admin</a>
 			{% endif %}
 			<a href="/profile/index">Profile</a>
 			<a href="/logout">Logout</a>
