Added book deletion

--- a/App/View/Book/sell.html
+++ b/App/View/Book/sell.html
@@ -22,7 +22,7 @@
 		</fieldset>
 		<fieldset>
 			<label>Author</label>
-			<input type="text" name="id_author" value="{{ book.id_author }}" required>
+			<input type="text" name="author" value="{{ book.author }}" required>
 		</fieldset>
 		<fieldset>
 			<label>Genre</label>
