--- a/app/view/base.html
+++ b/app/view/base.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="shortcut icon" href="img/icon/logo_light.png">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&family=Proza+Libre:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="/css/styles.css">
+	<link rel="stylesheet" href="/css/flash.css">
 	<link rel="stylesheet" href="/css/nav.css">
 	{% block styles %}{% endblock %}
 	<title>{% block title %}{% endblock %} • Bookshelf!</title>
@@ -33,11 +33,11 @@
 	{% endblock nav %}
 	
 	<!-- FLASH MESSAGES -->
-	{% for message in flash %}
-		<div id="flash" class="flash-{{message.type}}">
-			<span>{{ message.text }}</span>
-		</div>
-	{% endfor %}
+	<div id="flash-con">
+		{% for message in flash %}
+			<h3 class="flash-{{message.type}}">{{ message.text }}</h3>
+		{% endfor %}
+	</div>
 	
 	{% block body %}{% endblock %}
 	
