Small improvements on styling on various things

--- a/App/View/Book/success.html
+++ b/App/View/Book/success.html
@@ -3,6 +3,8 @@
 {% block title %}Success{% endblock %}
 
 {% block body %}
-	<h1>Success!</h1>
-	<p>Your book is now selling.</p>
+	<main class="s-main-con">
+		<h1 class="s-tittle">Success!</h1>
+		<p>Your book is now selling.</p>
+	</main>
 {% endblock %}
