--- a/app/view/register/success.html
+++ b/app/view/register/success.html
@@ -3,6 +3,8 @@
 {% block title %}Success{% endblock %}
 
 {% block body %}
-	<h1>Success!</h1>
-	<p>You are now registred.</p>
+	<main class="s-main-con">
+		<h1 class="s-tittle">Success!</h1>
+		<p>You are now registred.</p>
+	</main>
 {% endblock %}
